@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,15 +20,17 @@ import java.net.URI;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import reactor.core.publisher.Mono;
 
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseCookie;
 import org.springframework.http.client.reactive.ClientHttpRequest;
@@ -42,7 +44,7 @@ import org.springframework.util.MultiValueMap;
  * {@link WebTestClient}.
  *
  * <p>Note that a decoded response body is not exposed at this level since the
- * body may not have been decoded and consumed yet. Sub-types
+ * body may not have been decoded and consumed yet. Subtypes
  * {@link EntityExchangeResult} and {@link FluxExchangeResult} provide access
  * to a decoded response entity and a decoded (but not consumed) response body
  * respectively.
@@ -54,8 +56,10 @@ import org.springframework.util.MultiValueMap;
  */
 public class ExchangeResult {
 
-	private static final List<MediaType> PRINTABLE_MEDIA_TYPES = Arrays.asList(
-			MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML,
+	private static final Log logger = LogFactory.getLog(ExchangeResult.class);
+
+	private static final List<MediaType> PRINTABLE_MEDIA_TYPES = List.of(
+			MediaType.parseMediaType("application/*+json"), MediaType.APPLICATION_XML,
 			MediaType.parseMediaType("text/*"), MediaType.APPLICATION_FORM_URLENCODED);
 
 
@@ -72,6 +76,12 @@ public class ExchangeResult {
 	@Nullable
 	private final String uriTemplate;
 
+	@Nullable
+	private final Object mockServerResult;
+
+	/** Ensure single logging, e.g. for expectAll. */
+	private boolean diagnosticsLogged;
+
 
 	/**
 	 * Create an instance with an HTTP request and response along with promises
@@ -83,9 +93,11 @@ public class ExchangeResult {
 	 * @param responseBody capture of serialized response body content
 	 * @param timeout how long to wait for content to materialize
 	 * @param uriTemplate the URI template used to set up the request, if any
+	 * @param serverResult the result of a mock server exchange if applicable.
 	 */
 	ExchangeResult(ClientHttpRequest request, ClientHttpResponse response,
-			Mono<byte[]> requestBody, Mono<byte[]> responseBody, Duration timeout, @Nullable String uriTemplate) {
+			Mono<byte[]> requestBody, Mono<byte[]> responseBody, Duration timeout, @Nullable String uriTemplate,
+			@Nullable Object serverResult) {
 
 		Assert.notNull(request, "ClientHttpRequest is required");
 		Assert.notNull(response, "ClientHttpResponse is required");
@@ -98,6 +110,7 @@ public class ExchangeResult {
 		this.responseBody = responseBody;
 		this.timeout = timeout;
 		this.uriTemplate = uriTemplate;
+		this.mockServerResult = serverResult;
 	}
 
 	/**
@@ -110,6 +123,8 @@ public class ExchangeResult {
 		this.responseBody = other.responseBody;
 		this.timeout = other.timeout;
 		this.uriTemplate = other.uriTemplate;
+		this.mockServerResult = other.mockServerResult;
+		this.diagnosticsLogged = other.diagnosticsLogged;
 	}
 
 
@@ -146,7 +161,7 @@ public class ExchangeResult {
 	 * Return the raw request body content written through the request.
 	 * <p><strong>Note:</strong> If the request content has not been consumed
 	 * for any reason yet, use of this method will trigger consumption.
-	 * @throws IllegalStateException if the request body is not been fully written.
+	 * @throws IllegalStateException if the request body has not been fully written.
 	 */
 	@Nullable
 	public byte[] getRequestBodyContent() {
@@ -155,17 +170,18 @@ public class ExchangeResult {
 
 
 	/**
-	 * Return the HTTP status code as an {@link HttpStatus} enum value.
+	 * Return the HTTP status code as an {@link HttpStatusCode} value.
 	 */
-	public HttpStatus getStatus() {
+	public HttpStatusCode getStatus() {
 		return this.response.getStatusCode();
 	}
 
 	/**
-	 * Return the HTTP status code (potentially non-standard and not resolvable
-	 * through the {@link HttpStatus} enum) as an integer.
+	 * Return the HTTP status code as an integer.
 	 * @since 5.1.10
+	 * @deprecated as of 6.0, in favor of {@link #getStatus()}
 	 */
+	@Deprecated
 	public int getRawStatusCode() {
 		return this.response.getRawStatusCode();
 	}
@@ -188,25 +204,39 @@ public class ExchangeResult {
 	 * Return the raw request body content written to the response.
 	 * <p><strong>Note:</strong> If the response content has not been consumed
 	 * yet, use of this method will trigger consumption.
-	 * @throws IllegalStateException if the response is not been fully read.
+	 * @throws IllegalStateException if the response has not been fully read.
 	 */
 	@Nullable
 	public byte[] getResponseBodyContent() {
 		return this.responseBody.block(this.timeout);
 	}
 
+	/**
+	 * Return the result from the mock server exchange, if applicable, for
+	 * further assertions on the state of the server response.
+	 * @since 5.3
+	 * @see org.springframework.test.web.servlet.client.MockMvcWebTestClient#resultActionsFor(ExchangeResult)
+	 */
+	@Nullable
+	public Object getMockServerResult() {
+		return this.mockServerResult;
+	}
 
 	/**
-	 * Execute the given Runnable, catch any {@link AssertionError}, decorate
-	 * with {@code AssertionError} containing diagnostic information about the
-	 * request and response, and then re-throw.
+	 * Execute the given Runnable, catch any {@link AssertionError}, log details
+	 * about the request and response at ERROR level under the class log
+	 * category, and after that re-throw the error.
 	 */
 	public void assertWithDiagnostics(Runnable assertion) {
 		try {
 			assertion.run();
 		}
 		catch (AssertionError ex) {
-			throw new AssertionError(ex.getMessage() + "\n" + this, ex);
+			if (!this.diagnosticsLogged && logger.isErrorEnabled()) {
+				this.diagnosticsLogged = true;
+				logger.error("Request details for assertion failure:\n" + this);
+			}
+			throw ex;
 		}
 	}
 
@@ -219,10 +249,20 @@ public class ExchangeResult {
 				"\n" +
 				formatBody(getRequestHeaders().getContentType(), this.requestBody) + "\n" +
 				"\n" +
-				"< " + getStatus() + " " + getStatus().getReasonPhrase() + "\n" +
+				"< " + getStatus() + " " + getReasonPhrase(getStatus()) + "\n" +
 				"< " + formatHeaders(getResponseHeaders(), "\n< ") + "\n" +
 				"\n" +
-				formatBody(getResponseHeaders().getContentType(), this.responseBody) +"\n";
+				formatBody(getResponseHeaders().getContentType(), this.responseBody) +"\n" +
+				formatMockServerResult();
+	}
+
+	private static String getReasonPhrase(HttpStatusCode statusCode) {
+		if (statusCode instanceof HttpStatus status) {
+			return status.getReasonPhrase();
+		}
+		else {
+			return "";
+		}
 	}
 
 	private String formatHeaders(HttpHeaders headers, String delimiter) {
@@ -250,6 +290,12 @@ public class ExchangeResult {
 				.defaultIfEmpty("No content")
 				.onErrorResume(ex -> Mono.just("Failed to obtain content: " + ex.getMessage()))
 				.block(this.timeout);
+	}
+
+	private String formatMockServerResult() {
+		return (this.mockServerResult != null ?
+				"\n======================  MockMvc (Server) ===============================\n" +
+						this.mockServerResult + "\n" : "");
 	}
 
 }
